<resources>
    <string name="app_name">سامانت</string>
    <string name="no_network">اینترنت گوشی خود را روشن کنید</string>
    <string name="repair">تعمیر</string>
    <string name="review">بازدید</string>
    <string name="reports">گزارشات</string>
    <string name="settings">تنظیمات</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="mission_chose">انتخاب ماموریت</string>
    <string name="role_in_group">مسئولیت در گروه</string>
    <string name="confirm">تایید</string>
    <string name="review_date">تاریخ بازدید</string>
    <string name="review_date_colon">تاریخ بازدید:</string>
    <string name="sample_title">عنوان نمونه</string>
    <string name="good">خوب</string>
    <string name="bad">بد</string>
    <string name="add">اضافه کردن</string>
    <string name="boutia">سامانت</string>
    <string name="review_type">نوع بازدید</string>
    <string name="date">تاریخ</string>
    <string name="mission_date">تاریخ ماموریت</string>
    <string name="mission_date_colon">تاریخ ماموریت:</string>
    <string name="mission_type">نوع ماموریت:</string>
    <string name="Voltage">ولتاژ</string>
    <string name="line_name">نام خط</string>
    <string name="dispatching">شماره دیسپاچینگ</string>
    <string name="dispatching_code_colon">کد دیسپاچینگ:</string>
    <string name="cement_beam">تیر سیمانی</string>
    <string name="telescopic">تلسکوپی</string>
    <string name="lattice">مشبک</string>
    <string name="tower_tip">تیپ دکل</string>
    <string name="tower_type">نوع دکل</string>
    <string name="tower_name">نام دکل</string>
    <string name="tower_number">شماره دکل</string>
    <string name="tower_number_colon">شماره دکل:</string>
    <string name="circuit_number">تعداد مدار دکل</string>
    <string name="circuits">مدارها</string>
    <string name="flood">در معرض سیل</string>
    <string name="very_high">خیلی زیاد</string>
    <string name="high">زیاد</string>
    <string name="medium">متوسط</string>
    <string name="low">کم</string>
    <string name="amount_of_damages">میزان خسارت وارد شده</string>
    <string name="amount_of_risk">میزان خطر</string>
    <string name="no_selection">آیتمی انتخاب نشده</string>
    <string name="ok">تایید</string>
    <string name="ok_and_continue">تایید و ادامه</string>
    <string name="excavation">خاک برداری و خاک ریزی (مترمکعب)</string>
    <string name="number_of_harnesses">تعداد مهار</string>
    <string name="others">سایر</string>
    <string name="concrete_destaruction">تخریب بتن</string>
    <string name="horizental_crack">ترک افقی</string>
    <string name="concrete_corrosion">خوردگی بتن</string>
    <string name="vertical_crack">ترک عمودی</string>
    <string name="need_to_flood_net">نیاز به تور سیل</string>
    <string name="need_to_cleaning_grasses">نیاز به پاکسازی بوته های اطراف فونداسیون</string>
    <string name="amount_of_need_to_cleaning_grasses">میزان بوته های مورد نیاز پاکسازی</string>
    <string name="foundation">فونداسیون</string>
    <string name="beam_type">نوع تیر</string>
    <string name="angel">زاویه</string>
    <string name="pendant">آویز</string>
    <string name="bugs">ایرادات</string>
    <string name="stealing">سرقت</string>
    <string name="decay">پوسیدگی</string>
    <string name="to_be_out">بیرون بودن سیم زمین</string>
    <string name="clamp">کلمپ زمین</string>
    <string name="rupture">پارگی سیم</string>
    <string name="earth_wire">سیم زمین</string>
    <string name="or">یا</string>
    <string name="code_number">وارد کردن دستی کد</string>
    <string name="without_board">فاقد تابلو</string>
    <string name="board_fading_out">کم رنگ شدن تابلو</string>
    <string name="board_cleaning">پاک شدن تابلو</string>
    <string name="rusty">زنگ زدگی</string>
    <string name="to_be_bolt_open">باز بودن پیچ تابلو</string>
    <string name="number_board">تابلو شماره</string>
    <string name="tablo_havaee">تابلو هوایی</string>
    <string name="tablo_arayesh_phasi">تابلو آرایش فازی</string>
    <string name="tablo_arayesh_fazi">تابلو آرایش فازی</string>
    <string name="tablo">تابلو</string>
    <string name="tablo_harim">تابلو حریم</string>
    <string name="pich_mohre">پیچ و مهره</string>
    <string name="achar_keshi">آچار کشی</string>
    <string name="kasri">کسری</string>
    <string name="zang_zadegi">زنگ زدگی</string>
    <string name="bug_type">نوع عیب</string>
    <string name="twelve">12</string>
    <string name="fourteen">14</string>
    <string name="sixteen">16</string>
    <string name="size_pich">سایز پیچ</string>
    <string name="enter_the_number">تعداد را وارد کنید</string>
    <string name="adding">اضافه کردن</string>
    <string name="piche_pele">پیچ پله</string>
    <string name="niaz_be_tamir">نیاز به تعمیر</string>
    <string name="khare_zede_sooud">خار ضد صعود</string>
    <string name="plate">پلیت</string>
    <string name="mogheiyat">موقعیت</string>
    <string name="kasri_pich_mohre_plate">کسری پیچ و مهره</string>
    <string name="shekastegi">شکستگی</string>
    <string name="tozihat">توضیحات</string>
    <string name="enhenaye_nabshi">انحنای نبشی</string>
    <string name="yek_sar_baz">یک سر باز</string>
    <string name="size_nabshi">سایز نبشی*</string>
    <string name="nabshi">نبشی</string>
    <string name="tedad">تعداد</string>
    <string name="width">طول</string>
    <string name="serghat_nabshi">سرقت نبشی</string>
    <string name="images">تصاویر</string>
    <string name="jumper">جمپر</string>
    <string name="lole_pres_miyani">لوله پرس میانی</string>
    <string name="spacer">اسپیسر</string>
    <string name="lole_pres_entehayi">لوله پرس انتهایی</string>
    <string name="repier">ریپیر</string>
    <string name="bandaj">بانداژ</string>
    <string name="zadegi">زدگی سیم</string>
    <string name="baad_kardegi">بادکردگی سیم</string>
    <string name="damper">دمپر</string>
    <string name="armorad">آرموراد</string>
    <string name="colomp">کلمپ</string>
    <string name="shotor_gloi">شترگلوی</string>
    <string name="kolomp_entehaye_pich">کلمپ انتهایی پیچی</string>
    <string name="vazne">وزنه</string>
    <string name="hadihaye_felez_va_molhaghat">هادی های فاز و ملحقات</string>
    <string name="iradate_hadi">ایرادات هادی</string>
    <string name="iradate_etesalate_faz">ایرادات اتصالات فاز</string>
    <string name="tak_shield">تک شیلد</string>
    <string name="do_shield">دو شیلد</string>
    <string name="faghed_shield">فاقد شیلد</string>
    <string name="sime_mohafez_va_molhaghat">سیم محافظ ملحقات</string>
    <string name="shield_wire_a">ShieldWire-A</string>
    <string name="joint_box_a">JointBox -A</string>
    <string name="joint_box_b">JointBox -B</string>
    <string name="lole_press">لوله پرس</string>
    <string name="kafi">کفی</string>
    <string name="eshpil">اشپیل</string>
    <string name="yaragh">یراق آلات</string>
    <string name="iradate_yaragh">ایرادات یراق آلات</string>
    <string name="bagh_gir">جرقه گیر</string>
    <string name="koronaring">کرونارینگ</string>
    <string name="etesalat">اتصالات</string>
    <string name="lane_parande">لانه پرنده</string>
    <string name="tedade_lane_parande">تعداد لانه پرنده</string>
    <string name="has">دارد</string>
    <string name="dose_not_have">ندارد</string>
    <string name="exist">موجود</string>
    <string name="dose_not_exist">ناموجود</string>
    <string name="tedade_lane_parande_gard">تعداد لانه پرنده گارد</string>
    <string name="tedade_lane_parande_fase">تعداد لانه پرنده فاز</string>
    <string name="tedade_lane_parande_dakal">تعداد لانه پرنده دکل</string>
    <string name="tedade_ashia_ezafe_gard">تعداد اشیا اضافه گارد</string>
    <string name="tedade_ashia_ezafe_fase">تعداد اشیا اضافه فاز</string>
    <string name="tedade_ashia_ezafe_dakal">تعداد اشیا اضافه دکل</string>
    <string name="zanjire_maghare_va_molhaghat">زنجیره مقره و ملحقات</string>
    <string name="iradate_maghare_va_molhaghat">ایرادات زنجیره مقره و ملحقات</string>
    <string name="paregi">پارگی</string>
    <string name="lab_paridegi">لب پریدگی</string>
    <string name="kaj_bodan_zanjir">کج بودن زنجیر</string>
    <string name="nadashtan_eshpil">نداشتن اشپیل</string>
    <string name="ofset">آفست</string>
    <string name="alodegi">آلودگی</string>
    <string name="nadashtan_pich_mohre">نداشتن پیچ و مهره</string>
    <string name="dar_hale_biron_amadan_az_pin_maghare">در حال بیرون آمدن پین مقره</string>
    <string name="seramiki">سرامیکی</string>
    <string name="shisheyi">شیشه ای</string>
    <string name="silicon">سیلیکون</string>
    <string name="tarkibi">ترکیبی</string>
    <string name="nadarad">ندارد</string>
    <string name="sokhtegi">سوختگی</string>
    <string name="noe_asib_maghare">نوع آسیب مقره</string>
    <string name="khordegi">خوردگی</string>
    <string name="kap_pin_maghare">کپ و پین مقره</string>
    <string name="tedad_sokhtegi">تعداد سوختگی</string>
    <string name="tedad_shekastegi">تعداد شکستگی</string>
    <string name="code_scanning">اسکن بارکد دکل</string>
    <string name="please_scan_bar_code">لطفا بارکد موجود بر روی دکل را اسکن کنید</string>
    <string name="scan">اسکن</string>
    <string name="invalid_code">کد وارد شده صحیح نمی باشد</string>
    <string name="off_line">خاموش کردن خط</string>
    <string name="khat_niaz_be_khamooshi_darad">خط نیاز به خاموشی جهت تعمیرات دارد؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="taghato_ba_jade_asli">تقاطع با جاده اصلی</string>
    <string name="darad">دارد</string>
    <string name="mavane">موانع</string>
    <string name="ensheab">انشعاب</string>
    <string name="taghato_ba_20k">تقاطع با 20K</string>
    <string name="vaziyat_harim">وضعیت حریم</string>
    <string name="vaziyat_masir">وضعیت مسیر</string>
    <string name="please_select_one_of_two">لطفا یکی از دوگزینه را انتخاب کنید</string>
    <string name="mission_finish">پایان ماموریت</string>
    <string name="next_tower_review">بازدید دکل بعدی</string>
    <string name="login_enter">ورود</string>
    <string name="sakht_o_saz">ساخت و ساز</string>
    <string name="jade">جاده</string>
    <string name="feshar_ghavi">فشار قوی</string>
    <string name="loole_haye_sookht_resani">لوله های سوخت رسانی</string>
    <string name="derakht">درخت</string>
    <string name="keshavarzi">کشاورزی</string>
    <string name="number">شماره</string>
    <string name="plate_number">شماره پلیت</string>
    <string name="ashia_ezafe">اشیا اضافه</string>
    <string name="ready_to_send">آماده ارسال</string>
    <string name="data_collections">دیتا کالکشن ها</string>
    <string name="final_submit">ثبت نهایی</string>
    <string name="notification_bootia">سامانت</string>
    <string name="notification_gps">جی پی اس شما در حال اجرا است</string>
    <string name="notification_in_progress">در حال اجرا</string>
    <string name="notification_description">این نوتیفیکیشن در حالت روشن بودن جی پی اس در برنامه سامانت اجرا میشود</string>
    <string name="routine">روتین</string>
    <string name="pahpad">پهپاد</string>
    <string name="goroh">اعزام گروه</string>
    <string name="khodro">اعزام خودرو</string>
    <string name="karshenas">اعزام کارشناس</string>
    <string name="harim">پیگیری حریم</string>
    <string name="tahvil">تحویل تحول</string>
    <string name="khas">موارد خاص</string>
    <string name="termo">ترموویژن</string>
    <string name="zamin">مقاومت زمین</string>
    <string name="search_by_name">جستجو در نام ماموریت ها</string>
    <string name="search_by_dispatching_code">جستجو در کد دیپاچینگ</string>
    <string name="search_by_group_code">جستجو در نام گروه</string>
    <string name="in_progress">در حال انجام</string>
    <string name="past">گذشته</string>
    <string name="future">روزهای آینده</string>
    <string name="all">همه</string>
    <string name="one">مشخصات دکل</string>
    <string name="two">مکانیکال</string>
    <string name="three">الکتریکال</string>
    <string name="four">حریم هوایی</string>
    <string name="five">حریم زمینی</string>
</resources>