<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="reviewFourthLevelVM"
            type="com.controladad.boutia_pms.view_models.ReviewFourthLevelVM"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/linear_layout_wizard"
            android:layoutDirection="ltr"
            android:layout_margin="8dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/one"
                android:gravity="center"
                android:lines="2"
                app:textviewfont="@{`faNumRegular`}"
                android:background="@drawable/wizard_in_level_background"
                />
            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:padding="8dp"
                android:text="@string/two"
                android:gravity="center"
                android:lines="2"
                app:textviewfont="@{`faNumRegular`}"
                android:background="@drawable/wizard_in_level_background"
                />
            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:padding="8dp"
                android:text="@string/three"
                android:gravity="center"
                android:lines="2"
                app:textviewfont="@{`faNumRegular`}"
                android:background="@drawable/wizard_in_level_background"
                />
            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:padding="8dp"
                android:text="@string/four"
                android:lines="2"
                android:gravity="center"
                app:textviewfont="@{`faNumRegular`}"
                android:background="@drawable/wizard_in_level_background"
                />
            <View
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_10ssp"
                android:padding="8dp"
                android:text="@string/five"
                android:lines="2"
                android:gravity="center"
                app:textviewfont="@{`faNumRegular`}"
                android:background="@drawable/wizard_next_level_background"
                />

        </LinearLayout>
    <com.controladad.boutia_pms.adapters.StatefulRecyclerView
        android:background="@color/white"
        android:id="@+id/review_fourth_level_recycler_view"
        adapter_vertical="@{reviewFourthLevelVM.adapter}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </LinearLayout>

</layout>